[package]
name = "oxink"
version = "0.1.6"
edition = "2024"
description = "ANSI styling, terminal color helpers, and slash-command input components for Rust CLIs."
license = "MIT"
repository = "https://github.com/iamwjun/Oxink"
readme = "README.md"
keywords = ["ansi", "cli", "terminal", "input", "tui"]
categories = ["command-line-interface"]

[dependencies]

[dev-dependencies]
